--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -12,3 +12,5 @@ Roxygen: list(markdown = TRUE)
 RoxygenNote: 7.3.2
 Imports: 
     S7
+URL: https://github.com/t-kalinowski/S7test
+BugReports: https://github.com/t-kalinowski/S7test/issues
